--- a/css/768.less
+++ b/css/768.less
@@ -248,10 +248,6 @@ header .max1260px {
 	padding-right: percentage(20/980);
 }
 
-.content-area {
-	width:percentage(700/940);
-}
-
 #content-area-recreate,
 #content-area-nan,
 #content-area-mark,
@@ -261,7 +257,7 @@ header .max1260px {
 #content-area-giddy-throng,
 #content-area-earthship-seattle,
 #content-area-joemicheals {
-	.content-area;
+	width: percentage(700/940);
 }
 
 .projectDetails768 {
@@ -322,12 +318,34 @@ header .max1260px {
 	width: percentage(220/940);
 }
 
-#header-joemicheals h1 {
-   font-size:2.25em;
-   margin-left: 12px;
-   width:740px;
-   position: relative;
-   top:25px;
+header img {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+header#header-home-connect img {
+	margin-left: 0;
+	padding-left: 0;
+}
+
+header#header-joemicheals {
+	padding-left: 0;
+	
+	& h1 {
+	   display: block;
+	   font-size: 2.2em;
+	   width: 720px;
+	   position: relative;
+	   top: 25px;
+	}
+	
+	h1.fold {
+		display: none;
+	}	
+}
+
+header#header-earthship-seattle img {
+    margin-left: 0;
 }
 /* END PROJECT PAGES */
 
