--- a/css/768.less
+++ b/css/768.less
@@ -23,7 +23,7 @@
 
 /*** HOME PAGE ***/
 .home-page-container {
-	margin-bottom:50px;	
+	margin-bottom: 50px;	
 }
 
 .contact-icons {
@@ -263,28 +263,42 @@ header .max1260px {
 .projectDetails768 {
 		
 	& .project_details_p { 
-		width:percentage(220/700);
-		float:left;		
-		padding-top:0;
-		padding-bottom:0;
-		padding-left:0;
-		overflow:hidden;
-		font-size:.9em;
+		float: left;
+		/*width: percentage(460/700);*/ /* like the wire frames, 2/3 text, 1/3 image */
+		/*width: percentage(220/700);*/ /* 1/3 text, 2/3 image */
+		width: percentage(380/700); /* 5/9 text, 4/9 image */
+		/*width: percentage(300/700); *//* 4/9 text, 5/9 image */	
+		padding-top: 0;
+		padding-bottom: 0;
+		padding-left: 0;
+		overflow: hidden;
+		font-size: .9em;
 	}
 	
-	/* div contining the image */
-	& .project_details_img {
-		float:right;
-		width:percentage(460/700);
-		overflow:hidden;
-		border:2px solid grey;
-		text-align:center;
-		alignment-baseline:baseline;
-		margin-right:0;	
+	& figure {
+		float: right;
+		/*width: percentage(220/700);*/ /* like the wire frames, 2/3 text, 1/3 image */
+		/*width: percentage(460/700);*/ /* 1/3 text, 2/3 image */
+		width: percentage(300/700); /* 5/9 text, 4/9 image */
+		/*width: percentage(380/700);*/ /* 4/9 text, 5/9 image */
+		/*overflow: hidden;*/
+		/*border: 2px solid grey;*/
+		/*text-align: center;*/
+		
+		margin-right: 0;	
 	}
 	
-	& .project_details_img.no-border {
-		border: none;	
+	& figure img {
+		border: 2px solid grey;
+		/*alignment-baseline: baseline;*/
+	}
+	
+	& figcaption {
+		margin-top: .8em;
+	}
+	
+	& img.no-border {
+		border: none;
 	}
 }
 
