--- a/css/768.less
+++ b/css/768.less
@@ -258,15 +258,16 @@ header .max1260px {
 #content-area-earthship-seattle,
 #content-area-joemicheals {
 	width: percentage(700/940);
+	/*background-color: #FFF8DC; */ /* Cornsilk */
 }
 
 .projectDetails768 {
 		
 	& .project_details_p { 
 		float: left;
-		/*width: percentage(460/700);*/ /* like the wire frames, 2/3 text, 1/3 image */
+		width: percentage(460/700); /* like the wire frames, 2/3 text, 1/3 image */
 		/*width: percentage(220/700);*/ /* 1/3 text, 2/3 image */
-		width: percentage(380/700); /* 5/9 text, 4/9 image */
+		/*width: percentage(380/700);*/ /* 5/9 text, 4/9 image */
 		/*width: percentage(300/700); *//* 4/9 text, 5/9 image */	
 		padding-top: 0;
 		padding-bottom: 0;
@@ -277,9 +278,9 @@ header .max1260px {
 	
 	& figure {
 		float: right;
-		/*width: percentage(220/700);*/ /* like the wire frames, 2/3 text, 1/3 image */
+		width: percentage(220/700); /* like the wire frames, 2/3 text, 1/3 image */
 		/*width: percentage(460/700);*/ /* 1/3 text, 2/3 image */
-		width: percentage(300/700); /* 5/9 text, 4/9 image */
+		/*width: percentage(300/700); *//* 5/9 text, 4/9 image */
 		/*width: percentage(380/700);*/ /* 4/9 text, 5/9 image */
 		/*overflow: hidden;*/
 		/*border: 2px solid grey;*/
@@ -330,6 +331,7 @@ header .max1260px {
 	font-size: 1.1em;
 	line-height: 1.5; /* 24px / 16 px */
 	width: percentage(220/940);
+	/*background-color: #FFFDF4;*/
 }
 
 header img {
